--- a/index.html
+++ b/index.html
@@ -1,6 +1,52 @@
 <!DOCTYPE html>
 <html lang="ms">
 <head>
+<!-- ==== V12 CSS • Strict Layout & Uniform Controls (Aug 29, 2025) ==== -->
+<style>
+  /* General table stability */
+  .nadi-scroll-container { overflow-x: auto; width: 100%; }
+  .nadi-table { table-layout: fixed; border-collapse: separate; border-spacing: 0; }
+  .nadi-table th, .nadi-table td { overflow: hidden; text-overflow: ellipsis; white-space: nowrap; vertical-align: middle; }
+
+  /* Only Remark should wrap text */
+  .nadi-table td[data-col="remark"], .nadi-table th[data-col="remark"] { white-space: normal; }
+  .nadi-table td[data-col="remark"] textarea,
+  .nadi-table td[data-col="remark"] input[type="text"] { width: 100%; min-height: 36px; }
+
+  /* Uniform checkbox sizing & centering for status columns */
+  .nadi-table th[data-col="layak"], .nadi-table td[data-col="layak"],
+  .nadi-table th[data-col="tidakLayak"], .nadi-table td[data-col="tidakLayak"],
+  .nadi-table th[data-col="voucher"], .nadi-table td[data-col="voucher"] {
+    text-align: center; vertical-align: middle;
+  }
+  .nadi-table td[data-col="layak"] input[type="checkbox"],
+  .nadi-table td[data-col="tidakLayak"] input[type="checkbox"],
+  .nadi-table td[data-col="voucher"] input[type="checkbox"] {
+    width: 1.15em; height: 1.15em; min-width: 18px; min-height: 18px; margin: 0;
+    display: inline-block; vertical-align: middle;
+  }
+  .nadi-table td[data-col="layak"] .form-check,
+  .nadi-table td[data-col="tidakLayak"] .form-check,
+  .nadi-table td[data-col="voucher"] .form-check { display: flex; align-items: center; justify-content: center; margin: 0; }
+
+  /* Inputs shouldn't overflow cells */
+  .nadi-table input.form-control, .nadi-table select.form-select, .nadi-table .form-control {
+    width: 100%; max-width: 100%;
+  }
+
+  /* Keep actions compact & visible */
+  .nadi-table td[data-col="actions"] { white-space: nowrap; }
+  .nadi-table td[data-col="actions"] .btn { margin: 2px 4px; }
+
+  /* Ensure no TCA controls display inside Remark */
+  .nadi-table td[data-col="remark"] .tca-pack,
+  .nadi-table td[data-col="remark"] .tca-date,
+  .nadi-table td[data-col="remark"] .tca-time,
+  .nadi-table td[data-col="remark"] .tca-staff { display: none !important; }
+  .nadi-table td[data-col="remark"] input[type="date"],
+  .nadi-table td[data-col="remark"] input[type="time"] { display: none !important; }
+</style>
+
 
   <!-- Performance resource hints -->
   <link rel="preconnect" href="https://cdn.jsdelivr.net">
@@ -4297,82 +4343,236 @@ function useSelectedSession(){
 })();</script>
 
 
-<!-- ===== LOGIN HARNESS (V11 • Aug 29, 2025) ===== -->
+<!-- ==== V12 JS • NADI Logic (Guarded) (Aug 29, 2025) ==== -->
 <script>
 (function(){
-  function dbg(){ /* console.log.apply(console, arguments); */ }
+  // Run only if NADI table exists to avoid interfering with login page
+  if (!document.getElementById('nadiContainer')) return;
 
-  if (window.onSignIn || window.handleCredentialResponse) { dbg('Login already wired'); return; }
+  const $  = (sel, root=document) => root.querySelector(sel);
+  const $$ = (sel, root=document) => Array.from(root.querySelectorAll(sel));
 
-  function detectClientId(){
-    let cid = null;
-    const gOnload = document.getElementById('g_id_onload');
-    if (gOnload && gOnload.dataset && gOnload.dataset.client_id) cid = gOnload.dataset.client_id;
-    if (!cid){
-      const meta = document.querySelector('meta[name="google-signin_client_id"], meta[name="google-signin-client_id"]');
-      if (meta && meta.content) cid = meta.content;
-    }
-    if (!cid && window.GOOGLE_CLIENT_ID) cid = window.GOOGLE_CLIENT_ID;
-    return cid;
+  // Safe no-op toast if missing
+  if (typeof window.toast !== 'function') window.toast = function(){};
+
+  // Build a <colgroup> only if table is found and no colgroup yet
+  function ensureColGroup(){
+    const table = $('.nadi-table');
+    if (!table) return;
+    if (table.querySelector('colgroup')) return;
+    const cg = document.createElement('colgroup');
+    // Widths: tweak as needed — generous for Remark & TCA&Staff
+    const widths = [40,180,120,80,120,220,80,80,120,80,80,80,80,100,120,260,260,220];
+    widths.forEach(w=>{ const col=document.createElement('col'); col.style.width=w+'px'; cg.appendChild(col); });
+    table.insertBefore(cg, table.firstChild);
   }
 
-  async function onGoogleCredential(credential){
-    try{
-      if (window.firebase && firebase.auth){
-        const providerCred = firebase.auth.GoogleAuthProvider.credential(credential);
-        return firebase.auth().signInWithCredential(providerCred);
-      } else if (window.firebaseAuth && window.firebaseAuth.GoogleAuthProvider && window.firebaseAuth.getAuth){
-        const cred = window.firebaseAuth.GoogleAuthProvider.credential(credential);
-        return window.firebaseAuth.signInWithCredential(window.firebaseAuth.getAuth(), cred);
-      } else {
-        sessionStorage.setItem('google_id_credential', credential);
-        if (typeof window.afterGoogleSignIn === 'function') window.afterGoogleSignIn(credential);
-        return true;
-      }
-    }catch(e){
-      console.error('Sign-in error:', e);
-      try { toast && toast('Ralat Login', String(e && e.message || e), 'error'); } catch(_){}
-    }
-  }
-
-  function initGSI(){
-    if (!(window.google && google.accounts && google.accounts.id)) { dbg('GSI not ready'); return; }
-    const client_id = detectClientId();
-    if (!client_id){ dbg('No client_id'); return; }
-    window.handleCredentialResponse = async function(res){
-      if (!res || !res.credential) return;
-      await onGoogleCredential(res.credential);
+  // Locate important cells by data-col
+  function getCells(row){
+    const q = (key) => row.querySelector('td[data-col="'+key+'"]');
+    return {
+      layakCell:    q('layak'),
+      takCell:      q('tidakLayak'),
+      voucherCell:  q('voucher'),
+      remarkCell:   q('remark'),
+      tcaCell:      q('tcaStaff') || q('tcastaff') || q('tca'),
+      actionsCell:  q('actions')  || row.cells[row.cells.length-1]
     };
-    try{
-      google.accounts.id.initialize({ client_id, callback: window.handleCredentialResponse, auto_select: false, ux_mode: 'popup' });
-    }catch(e){ console.error('GSI init error', e); }
-    var btnHost = document.getElementById('googleSignInContainer') || document.getElementById('gsiBtn');
-    if (btnHost){
-      try{ google.accounts.id.renderButton(btnHost, { type: 'standard', theme: 'outline', size: 'large' }); }catch(e){}
-    }
+  }
+  function getInputs(cells){
+    return {
+      layak:   cells.layakCell && cells.layakCell.querySelector('input[type="checkbox"]'),
+      tak:     cells.takCell && cells.takCell.querySelector('input[type="checkbox"]'),
+      voucher: cells.voucherCell && cells.voucherCell.querySelector('input[type="checkbox"]')
+    };
   }
 
-  function initGapiAuth2(){
-    if (!(window.gapi && gapi.auth2)) return;
-    const client_id = detectClientId();
-    if (!client_id) return;
-    gapi.load('auth2', function(){
-      try{
-        const auth2 = gapi.auth2.init({ client_id });
-        const el = document.getElementById('googleSignInBtnLegacy');
-        if (el) auth2.attachClickHandler(el, {}, function(googleUser){
-          const id_token = googleUser.getAuthResponse().id_token;
-          onGoogleCredential(id_token);
-        });
-      }catch(e){ console.error('gapi auth2 init error', e); }
+  function wrapCheckbox(inp){
+    if (!inp) return;
+    inp.classList.add('form-check-input');
+    const p = inp.parentElement;
+    if (!p || p.classList.contains('form-check')) return;
+    const wrap = document.createElement('div');
+    wrap.className = 'form-check';
+    p.insertBefore(wrap, inp);
+    wrap.appendChild(inp);
+  }
+
+  function ensureTcaPack(cells){
+    if (!cells.tcaCell) return null;
+    let pack = cells.tcaCell.querySelector('.tca-pack');
+    if (!pack){
+      pack = document.createElement('div');
+      pack.className = 'tca-pack d-flex flex-wrap align-items-center gap-1';
+      const d = document.createElement('input'); d.type='date'; d.className='form-control form-control-sm tca-date'; d.placeholder='Tarikh TCA';
+      const t = document.createElement('input'); t.type='time'; t.className='form-control form-control-sm tca-time'; t.placeholder='Masa';
+      const s = document.createElement('input'); s.type='text';  s.className='form-control form-control-sm tca-staff'; s.placeholder='Staff';
+      [d,t,s].forEach(el=>{ el.style.minWidth='120px'; el.style.flex='1 1 110px'; });
+      pack.appendChild(d); pack.appendChild(t); pack.appendChild(s);
+      cells.tcaCell.appendChild(pack);
+    }
+    return pack;
+  }
+
+  // Move any TCA fields out of Remark into TCA&Staff column
+  function sanitizeRemark(cells){
+    if (!cells.remarkCell) return;
+    const stray = cells.remarkCell.querySelectorAll('.tca-date,.tca-time,.tca-staff,.tca-pack,input[type="date"],input[type="time"]');
+    if (stray.length && cells.tcaCell){
+      const pack = ensureTcaPack(cells);
+      stray.forEach(el=>{
+        if (el.classList && el.classList.contains('tca-pack')){
+          el.querySelectorAll('.tca-date,.tca-time,.tca-staff').forEach(ch=>pack.appendChild(ch));
+          el.remove();
+        }else{
+          if (el.tagName==='INPUT' && el.type==='date') el.classList.add('tca-date','form-control','form-control-sm');
+          if (el.tagName==='INPUT' && el.type==='time') el.classList.add('tca-time','form-control','form-control-sm');
+          pack.appendChild(el);
+        }
+      });
+    }
+    // As final guard, remove any raw date/time left in Remark
+    cells.remarkCell.querySelectorAll('input[type="date"],input[type="time"]').forEach(el=>el.remove());
+  }
+
+  // Ensure actions buttons exist (without replacing originals if present)
+  function ensureActions(cells){
+    if (!cells.actionsCell) return;
+    const hasAny = cells.actionsCell.querySelector('.btn');
+    if (hasAny) return;
+    const wrap = document.createElement('div');
+    wrap.className = 'btn-group btn-group-sm';
+    const btnMain = document.createElement('button');
+    btnMain.className = 'btn btn-primary btn-main-action';
+    btnMain.textContent = 'Daftar';
+    const btnWA = document.createElement('button');
+    btnWA.className = 'btn btn-outline-success btn-wa-report';
+    btnWA.textContent = 'WA Report';
+    const btnDel = document.createElement('button');
+    btnDel.className = 'btn btn-outline-danger btn-delete';
+    btnDel.textContent = 'Buang';
+    wrap.appendChild(btnMain); wrap.appendChild(btnWA); wrap.appendChild(btnDel);
+    cells.actionsCell.appendChild(wrap);
+
+    // Optional handlers
+    btnWA.addEventListener('click', (e)=>{
+      e.preventDefault();
+      const row = e.currentTarget.closest('tr');
+      if (typeof window.openWhatsAppReport === 'function') return window.openWhatsAppReport(row);
+      if (typeof window.showWhatsAppReportPreview === 'function') return window.showWhatsAppReportPreview(row);
+      window.toast('Makluman','Fungsi WA Report tidak ditakrifkan.','warning');
+    });
+    btnDel.addEventListener('click', (e)=>{
+      e.preventDefault();
+      const row = e.currentTarget.closest('tr');
+      if (typeof window.deleteNadiRow === 'function') return window.deleteNadiRow(row);
+      if (confirm('Padam baris ini?')) row.remove();
     });
   }
 
-  document.addEventListener('DOMContentLoaded', function(){
-    if (!document.getElementById('login') && !document.getElementById('googleSignInContainer') && !document.querySelector('.login-card')) return;
-    initGSI();
-    initGapiAuth2();
-  });
+  function setInputsEnabled(enabled, ...els){
+    els.forEach(el=>{ if (el){ el.disabled = !enabled; el.classList.toggle('is-disabled', !enabled); } });
+  }
+
+  function updateRowState(row){
+    const cells = getCells(row);
+    const { layak, tak, voucher } = getInputs(cells);
+
+    // Wrap for uniform look
+    wrapCheckbox(layak); wrapCheckbox(tak); wrapCheckbox(voucher);
+
+    // Move TCA fields away from Remark and ensure pack in TCA column
+    sanitizeRemark(cells);
+
+    const onLayak   = !!(layak   && layak.checked);
+    const onTak     = !!(tak     && tak.checked);
+    const onVoucher = !!(voucher && voucher.checked);
+
+    // Exclusivity
+    const group = [layak, tak, voucher].filter(Boolean);
+    const setExclusive = (picked) => group.forEach(x=>{ if (x && x!==picked) x.checked = false; });
+    if (layak && layak._justChanged){ setExclusive(layak); layak._justChanged=false; }
+    if (tak && tak._justChanged){ setExclusive(tak); tak._justChanged=false; }
+    if (voucher && voucher._justChanged){ setExclusive(voucher); voucher._justChanged=false; }
+
+    // Enable TCA fields when Layak OR Voucher
+    const pack = ensureTcaPack(cells);
+    const d = pack && pack.querySelector('.tca-date');
+    const t = pack && pack.querySelector('.tca-time');
+    const s = pack && pack.querySelector('.tca-staff');
+    setInputsEnabled(onLayak || onVoucher, d, t, s);
+
+    // Main button label/route (do not touch WA/Report/Buang)
+    const main = cells.actionsCell && (cells.actionsCell.querySelector('[data-action="main"]') || cells.actionsCell.querySelector('.btn-main-action'));
+    if (main){
+      if (!main.dataset.origLabel) main.dataset.origLabel = (main.textContent||'').trim() || 'Daftar';
+      if (onVoucher){
+        main.textContent = 'Daftar Voucher';
+        main.dataset.route = 'tca';
+      }else if (onLayak){
+        main.textContent = main.dataset.origLabel || 'Daftar';
+        main.dataset.route = 'layak';
+      }else{
+        main.textContent = main.dataset.origLabel || main.textContent;
+        main.dataset.route = '';
+      }
+      if (!main._wired){
+        main._wired = true;
+        main.addEventListener('click', (e)=>{
+          const route = main.dataset.route || '';
+          const rowEl = e.currentTarget.closest('tr');
+          if (route === 'tca'){
+            e.preventDefault(); e.stopPropagation();
+            if (typeof window.nadiSaveVoucherRow === 'function') return window.nadiSaveVoucherRow(rowEl);
+            if (typeof window.saveRowToTCA === 'function') return window.saveRowToTCA(rowEl);
+            window.toast('Makluman','Baris ditandakan Voucher (TCA).','info');
+          }
+        }, true);
+      }
+    }
+  }
+
+  function wireRow(row){
+    const cells = getCells(row);
+    const { layak, tak, voucher } = getInputs(cells);
+    [layak, tak, voucher].forEach(inp=>{
+      if (!inp || inp._wired) return;
+      inp._wired = true;
+      inp.addEventListener('change', ()=>{ inp._justChanged = true; updateRowState(row); });
+    });
+    ensureActions(cells);
+    updateRowState(row);
+  }
+
+  function wireAll(){ $$('#nadiContainer tr').forEach(wireRow); }
+
+  // Init
+  ensureColGroup();
+  const container = document.getElementById('nadiContainer');
+  if (container){
+    const mo = new MutationObserver(()=>wireAll());
+    mo.observe(container, {childList:true, subtree:true});
+    wireAll();
+  }
+
+  // Save all: route only Voucher rows to TCA list
+  const btnSaveAll = document.getElementById('btnNadiSaveActivity');
+  if (btnSaveAll && !btnSaveAll._wired){
+    btnSaveAll._wired = true;
+    btnSaveAll.addEventListener('click', function(){
+      const rows = $$('#nadiContainer tr');
+      let cnt = 0;
+      rows.forEach(row=>{
+        const cells = getCells(row);
+        const voucher = cells.voucherCell && cells.voucherCell.querySelector('input[type="checkbox"]');
+        if (voucher && voucher.checked){
+          if (typeof window.nadiSaveVoucherRow === 'function'){ window.nadiSaveVoucherRow(row); cnt++; }
+          else if (typeof window.saveRowToTCA === 'function'){ window.saveRowToTCA(row); cnt++; }
+        }
+      });
+      if (cnt>0) window.toast('Berjaya', cnt+' baris voucher dirutekan ke senarai TCA.','success');
+    }, true);
+  }
 })();
 </script>
 </body>
