--- a/index.html
+++ b/index.html
@@ -700,6 +700,7 @@
     <!-- ⬆️ TAMBAH KOLUM BARU DI SINI -->
     <th style="min-width: 200px;">TCA & Staff</th>
     <th style="min-width: 180px;">Tindakan</th>
+    <th style="min-width: 180px;">Tindakan</th>
   </tr>
 </thead>
               <tbody id="nadiContainer">
@@ -4641,6 +4642,7 @@ function useSelectedSession(){
       'tca voucher': '120px',
       'remark': '200px',
       'tca & staff': '220px',
+      'tindakan': '180px',
       'wa report': '120px',
       'buang': '100px',
       'daftar': '120px'
